/**
* @version $Id$
* @package FrontAccounting
* @copyright (C) 2005 - 2011 FrontAccounting, LLC
* @license http://www.gnu.org/copyleft/gpl-3.0.html GNU/GPL
* FrontAccounting is Free Software
*/

1. Changelog
------------
This is a changelog for FrontAccounting All releases.

2013-04-19 : 3223 : Fixed hotkey menu option selection issues on Chrome.
2013-04-19 : 3222 : Improved Customer and Supplier Balances Report. Option to choose last column as balance.
2013-04-18 : 3221 : Fiscal years: fixed typo in error message message. Cleanup in rep308 (improper gettext usage on empty string). (missing rep308.php and wrong encoding in empty.po)
2013-04-18 : 3220 : Added years 2012, 2013 in standard init sql files.
2013-04-18 : 3219 : A couple of small bugs in customer and supplier balances report fixed.
2013-04-10 : 3218 : Paypal link url fixed again.
2013-04-09 : 3217 : Dimension view balances were not updated after change in date range selection.
2013-04-08 : 3216 : Superceded by HG 3218
2013-04-08 : 3215 : 0002183: Advanced assembly should work with empty BOM. Fixed.
2013-04-08 : 3214 : 0002172: Work entry not adjusting cost, fixed

2013-03-29 : 3213 : Missing Journal Inquiry: Work Order selection in list selector.
2013-03-24 : 3212 : header.inc cleanup
2013-03-24 : 3211 : Line end cleanups.
2013-03-23 : 3210 : Cleanup of 3209
2013-03-23 : 3209 : Cleanup
2013-03-23 : 3208 : Added pre_header and pre_footer hooks.
2013-03-20 : 3207 : Cleanups
2013-03-19 : 3206 : Cleanup in Customer Payments (fixed blinking error msg during processing payment)
2013-03-18 : 3205 : Changes in standard themes: fixed html, menu index can be rendered by extension module
2013-03-15 : 3204 : Janusz Merge to default
2013-03-15 : 3203 : Customer Payments: fixed allocatable transactions display on start of new customer payment.
2013-03-11 : 3202 : Fixed error on edit of a customer payment (certain MySql releases).
2013-03-08 : 3201 : Crediting an invoice in transactions shows wrong invoice date.